--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     "minimum-stability": "stable",
     "require": {
         "altcha-org/altcha": "^1.3"
+    },
+    "require-dev": {
+        "rector/rector": "^2.3"
     }
 }
