--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "altcha-org/altcha": "^1.3"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.92.3",
+        "phpstan/phpstan": "^2.1.33",
         "rector/rector": "^2.3"
     }
 }
